# agentMarketplace

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/backend/: config.py  constants.py  exceptions.py  main.py
backend/backend/agents/: base_agent.py  content_writer.py  designer.py  ghost_agents.py  market_researcher.py  project_manager.py  qa_judge.py  registry.py  web_developer.py
backend/backend/core/: connection_manager.py  database.py  event_bus.py  event_types.py  logger.py  redis_client.py
backend/backend/enums/: __init__.py  budget_tier.py  job_state.py  judge_decision.py  milestone.py  task_state.py  transaction_type.py
backend/backend/llm/: embedding_service.py  gemini_client.py  output_parser.py  rate_limiter.py
backend/backend/marketplace/: bidding_engine.py  eligibility_filter.py  reputation_service.py  selection_engine.py  types.py
backend/backend/orchestrator/: job_state_machine.py  pipeline.py
backend/backend/payments/: escrow_service.py  ledger_service.py  milestone_engine.py  refund_service.py  wallet_service.py
backend/backend/repositories/: __init__.py  agent_repo.py  base.py  bid_repo.py  event_repo.py  job_repo.py  reputation_repo.py  task_repo.py  transaction_repo.py  wallet_repo.py
backend/backend/utils/: hashing.py
backend/backend/workflow/: aggregator.py  dag_runner.py  dependency_resolver.py  state_machine.py  task_executor.py  types.py
backend/docs/: DEMO_STORYBOARD.md
backend/scripts/: api_demo.sh  reset_database.py  run_full_demo.py  seed_database.py  test_gemini_connection.py  verify_chain.py  ws_smoke_demo.py
backend/tests/: conftest.py
backend/tests/integration/: test_agent_smoke.py  test_bidding_round.py  (+7 more)
(+133 files in other folders)
